--- a/package.json
+++ b/package.json
@@ -5,19 +5,12 @@
   "description": "",
   "license": "MIT",
   "dependencies": {
-    "coffee-script": "^1.8.0",
-    "director": "^1.2.3",
-    "express": "^4.9.6",
-    "handlebars": "^2.0.0",
-    "morgan": "^1.3.2",
-    "pretty-hrtime": "^0.2.1",
-    "react": "^0.11.0",
-    "rsvp": "^3.0.14",
-    "superagent": "^0.20.0",
-    "underscore": "^1.7.0",
     "browserify": "^4.1.11",
+    "coffee-script": "^1.8.0",
     "coffeeify": "^0.6.0",
+    "director": "^1.2.3",
     "envify": "^1.2.1",
+    "express": "^4.9.6",
     "gulp": "^3.8.8",
     "gulp-autoprefixer": "^1.0.1",
     "gulp-connect": "^2.0.5",
@@ -27,7 +20,16 @@
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
+    "handlebars": "^2.0.0",
     "map-stream": "^0.1.0",
+    "morgan": "^1.3.2",
+    "pretty-hrtime": "^0.2.1",
+    "react": "^0.12.0",
+    "react-router": "^0.10.2",
+    "rsvp": "^3.0.14",
+    "serve-favicon": "^2.1.7",
+    "superagent": "^0.20.0",
+    "underscore": "^1.7.0",
     "vinyl-source-stream": "^0.1.1",
     "vinyl-sourcemaps-apply": "^0.1.4",
     "watchify": "^0.10.2"
